feat(ui): adiciona física e acúmulo em números de dano e status